--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p>Hola escribiendo el primer documento HTML</p>
+    <!--Esto es un comentario-->
+    <p>Aprendiendo sobre diseño Web</p>
 </body>
 </html>
