--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aprendiendo HTML</title> <!--Entre 55 y 65 caracteres de longitud-->
 </head>
 <body>
     <p>Hola escribiendo el primer documento HTML</p>
